--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation files('libs/achartengine-1.2.0.jar')
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 }
