--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity android:name=".accountmenu.MoneyTab"/>
         <activity android:name=".KgPopup"/>
         <activity android:name=".MypuppyTab"/>
+        <activity android:name=".SetPuppy"/>
 
         <activity android:name=".accountmenu.MoneyEdit"/>
 
